Updated chatbox to save chat history via local history. Chat can be reset.

--- a/popup.html
+++ b/popup.html
@@ -1,14 +1,17 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Mr. White</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chatbot</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div id="chat-container">
         <div id="chat-box"></div>
-        <input type="text" id="user-input" placeholder="Ask a question...">
+        <input type="text" id="user-input" placeholder="Ask a Question...">
         <button id="send-btn">Send</button>
+        <button id="new-chat-btn">New Chat</button>
     </div>
     <script src="popup.js"></script>
 </body>
