Create fullscreen mode. Divied javascript functionality into 3 files. Created seperate CSS file for fullscreen mode.

--- a/Fullscreen.html
+++ b/Fullscreen.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Cyber Chatbot - Fullscreen</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="fullscreen.css">
 </head>
 <body>
     <div id="chat-container">
@@ -13,7 +13,7 @@
         <button id="send-btn">Send</button>
         <button id="new-chat-btn">New Chat</button>
     </div>
-
+    <script src="core.js"></script>
     <script src="fullscreen.js"></script>
 </body>
 </html>
