--- a/popup.html
+++ b/popup.html
@@ -15,6 +15,7 @@
         <button id="send-btn">Send</button>
         <button id="new-chat-btn">New Chat</button>
     </div>
+    <script src="core.js"></script>
     <script src="popup.js"></script>
 </body>
 </html>
