fixed core,js empty function, merged new front design with current design, and added min max buttons

--- a/Fullscreen.html
+++ b/Fullscreen.html
@@ -8,7 +8,9 @@
 <body>
     <div id="chat-container">
         <div id="chat-box"></div>
-
+        <div id="thinking-status" style="display: none; font-style: italic; margin: 5px 0;">
+            Mr. White is thinking...
+        </div>
         <input type="text" id="user-input" placeholder="Ask a question...">
         <button id="send-btn">Send</button>
         <button id="new-chat-btn">New Chat</button>
