--- a/popup.html
+++ b/popup.html
@@ -11,6 +11,9 @@
         <button id="fullscreen-btn">Fullscreen</button>
         <button id="minimize-btn">Minimize</button>
         <div id="chat-box"></div>
+        <div id="thinking-status" style="display: none; font-style: italic; margin: 5px 0;">
+            Mr. White is thinking...
+        </div>
         <input type="text" id="user-input" placeholder="Ask a Question...">
         <button id="send-btn">Send</button>
         <button id="new-chat-btn">New Chat</button>
